# fw_adc_reg

./: CMakeLists.txt  Licenses.txt  Notice.txt  THIRD-PARTY-LICENSES  license_fw_adc_reg.txt  sdkconfig
components/hal/: mipi_csi_hal.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: func_common.h  func_pcnt.h  func_pwm.h  ktd2052.h
main/src/: func_pcnt.c  func_pwm.c  ktd2052.c  main.c  tcp_client.c
